--- a/src/sass/backend/_ui.scss
+++ b/src/sass/backend/_ui.scss
@@ -1,12 +1,7 @@
 /*
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
+UI Elements, from jquery UI CSS
 */
-/*
-    Created on : 20.01.2022, 14:22:59
-    Author     : unrz59
-*/
+
 
 #ui-datepicker-div {
     background-color: white; // var(--color-StandardHellgrau);
