--- a/src/sass/plugins/_rrze-elements.scss
+++ b/src/sass/plugins/_rrze-elements.scss
@@ -240,6 +240,12 @@ button.expand-all {
 	 display: inherit;
      }
 }
+#content .accordion {
+    button.expand-all {
+	@include defaultlinkstyle();
+	@include buttonstyle();
+    }
+}
 /*-----------------------------------------------------------------------------------*/
 /* Alerts
 /*-----------------------------------------------------------------------------------*/
@@ -284,8 +290,9 @@ button.expand-all {
 /*-----------------------------------------------------------------------------------*/
 /* Buttons
 /*-----------------------------------------------------------------------------------*/
-.standard-btn {
+#content .standard-btn {
     @include defaultlinkstyle();
+    @include buttonstyle();
 }
 
 /*-----------------------------------------------------------------------------------*/
