--- a/src/sass/elements/_buttons.scss
+++ b/src/sass/elements/_buttons.scss
@@ -1,20 +1,19 @@
 /*-----------------------------------------------------------------------------------*/
 /* Buttons
 /*-----------------------------------------------------------------------------------*/
-button:not(.meta-links-trigger-button):not(.accordion-toggle):not(.menu-item),
-input[type="button"],
-[role="button"]:not(.mejs-overlay-button) {
+// button:not(.meta-links-trigger-button):not(.accordion-toggle):not(.menu-item),
+button,
+input[type="button"] {
+// [role="button"]:not(.mejs-overlay-button) {
     @include buttonstyle();
 }
 
-#content .entry-content a.standard-btn, 
-#content .page .entry-content button.standard-btn,
-#content .post .entry-content a.standard-btn, 
-#content .post .entry-content button.standard-btn,
-#content a.standard-btn.primary-btn,
-#content a.standard-btn,
-#content a.btn, 
-#content a[role="button"] {
+
+button.standard-btn,
+a.standard-btn.primary-btn,
+a.standard-btn,
+a.btn, 
+a[role="button"] {
     @include defaultlinkstyle();
     @include buttonstyle();
 }
