Styling Orga-Breadcrumb

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -11,6 +11,7 @@ $farbfamilie: 'zuv';
 // Define colors
 $colormap-misc: ("Text": #222, 
 		 "TextLight": #797676, 
+		 "TextLightKontrast": #5B5858,
 		 "MetaTextDefault": #444,
 		 "Notice": #a71c18, 
 		 "Alert": #c5ac94,
