Styling Mobile Nav-Icons

--- a/css/fau-theme-admin.css
+++ b/css/fau-theme-admin.css
@@ -89,6 +89,7 @@
   --color-tf-dunkelste-kontrast: #fff;
   --color-Text: #222;
   --color-TextLight: #797676;
+  --color-TextLightKontrast: #5B5858;
   --color-MetaTextDefault: #444;
   --color-Notice: #a71c18;
   --color-Alert: #c5ac94;
